--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <button id="rock" style = 'margin: 20px'>Rock</button>
+    <button id="paper" style = 'margin: 20px'>Paper</button>
+    <button id="scissors" style = 'margin: 20px'>Scissors</button>
     <div id="result">
 
     </div>
