--- a/index.html
+++ b/index.html
@@ -4,14 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <style>
+
+        /* body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        } */
+
+        #container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            margin: auto;
+            width: 500px;
+        }
+
+        #buttons {
+            margin: 10px;
+            padding: 10px;
+        }
+
+    </style>
 </head>
 <body>
-    <button id="rock" style = 'margin: 20px'>Rock</button>
-    <button id="paper" style = 'margin: 20px'>Paper</button>
-    <button id="scissors" style = 'margin: 20px'>Scissors</button>
-    <div id="result">
-
-    </div>
+    <div id="container">
+        <div id="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+            <div id="result">
+            </div>
+    </div>  
     <script src="main.js"></script>
 </body>
 </html>
