Finish game functionality and add README

--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <title>Rock Paper Scissors</title>
     <style>
 
-        /* body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        } */
-
         #container {
             display: flex;
             flex-direction: column;
@@ -19,6 +13,7 @@
             align-items: center;
             padding: 10px;
             margin: auto;
+            height: 100vh;
             width: 500px;
         }
 
