--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 </head>
 <body>
     <div id="container">
+            <div id="round">
+            </div>
         <div id="buttons">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
